# duckgres

./: .dockerignore  .gitignore  .golangci.yml  .sprite  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.controlplane  Dockerfile.worker  HISTORY.md  INTEGRATION_TEST_PLAN.md  PLAN.md  POSTGRES_DUCKLAKE_COMPATIBILITY.md  QA_COMPATIBILITY.md  README.md  TODO.md  WRITABLE_CTE_PLAN.md  ci_workflow_test.go  config_resolution.go  config_resolution_k8s_test.go  docker-compose.yaml  duckgres-test.yaml  duckgres.example.yaml  duckgres.yaml  duckgres.yaml.example  duckgres_local_ducklake.yaml  duckgres_local_test.yaml  go.mod  go.sum  justfile  k8s_manifest_test.go  logging.go  logging_test.go  main.go  main_test.go  metrics-compose.yml  otel_resource.go  pr_review_report.md  prometheus-docker-compose.yml  prometheus.yml  (+6 more)
configloader/: file_config.go  load.go
configresolve/: cliflags.go  cliflags_test.go  resolve.go  resolve_admission_reclaimer_test.go  resolve_bind_budgets_test.go  resolve_discovery_secret_test.go  resolve_internal_secret_test.go  resolve_k8s_test.go  resolve_querylog_test.go  resolve_read_only_secret_test.go
controlplane/: acquire_metrics.go  acquire_metrics_test.go  activation_payload_test.go  admin_providers.go  admission_metrics.go  admission_metrics_test.go  admission_reclaimer.go  admission_reclaimer_test.go  capacity_policy.go  compute_billing_api.go  compute_billing_api_test.go  compute_capture.go  compute_capture_test.go  (+157 more)
scripts/client-compat/clients/tokio-postgres/: Cargo.toml  Dockerfile
scripts/client-compat/clients/tokio-postgres/src/: main.rs
(+982 files in other folders)
