[package]
name = "rust-compat-test"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
native-tls = "0.2"
postgres-native-tls = "0.5"
serde_yaml = "0.9"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
